# tatrman-server

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO_PROOF_THROWAWAY.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts  tatrman-server-0.9.0.tgz
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-image.yml  release-nlp-backends.yml  validate-central-token.yml
conformance/: README.md  corpus-hashes.sha256
docs/: HEADERS.md  operations.md  superset.md
eval/grounding/: .gitignore  ACCEPTANCE.md  README.md  SCHEMA.md  build_corpus.py  conftest.py  pyproject.toml  report.py  requirements-test.txt  run_eval.py
eval/grounding/corpus/: e2e-cases.json  grounding-cases.json  supplemental.json
eval/grounding/dashboards/: README.md  grounding-alerts.yaml  grounding-overview.json
eval/grounding/rollout/: README.md
eval/grounding/tests/: test_corpus_valid.py  test_report.py
gradle/: libs.versions.toml
helm/tatrman-server/: Chart.yaml  values-contract.md  values.yaml
helm/tatrman-server/deploy/: values-bp-dsk-smoke.yaml  values-kind-ci.yaml
helm/tatrman-server/fixtures/: values-dark-geo.yaml  values-full.yaml  values-minimal.yaml
infra/backstage/: README.md  app-config.production.yaml  app-config.yaml
infra/health/: README.md  build.gradle.kts
infra/ttr-identity/: README.md  build.gradle.kts
scripts/: add-spdx.sh  check-dependency-rules.sh  check-spdx.sh  helm-deps.sh  helm-golden.sh
scripts/verify-public-resolution/: README.md  build.gradle.kts  settings.gradle.kts
services/chrono/: build.gradle.kts
services/geo/: build.gradle.kts
services/money/: build.gradle.kts
services/ttr-dispatch/: README.md  build.gradle.kts
services/ttr-fuzzy/: README.md  build.gradle.kts
services/ttr-grounding-mcp/: build.gradle.kts
services/ttr-llm-gateway/: README.md  build.gradle.kts
services/ttr-nlp/: Dockerfile  README.md  config.yaml  conftest.py  docker-compose.offline.yml  pyproject.toml
services/ttr-nlp/backends/morphodita/: Dockerfile
services/ttr-nlp/backends/nametag3/: Dockerfile
services/ttr-nlp/backends/spacy/: Dockerfile  server.py
services/ttr-nlp/backends/stanza/: Dockerfile  server.py
services/ttr-nlp/docs/: catalog-info.yaml
services/ttr-nlp/eval/: README.md  SCHEMA.md  run_eval.py
services/ttr-nlp/eval/corpus/: seed.jsonl
services/ttr-nlp/eval/reports/: .gitkeep
services/ttr-nlp/k8s/: Chart.yaml  values.yaml
services/ttr-nlp/k8s/base/: deployment.yaml
services/ttr-nlp/k8s/overlays/local/: kustomization.yaml
services/ttr-nlp/k8s/templates/: _env.tpl  _helpers.tpl  backends.yaml  deployment.yaml  service.yaml
services/ttr-nlp/scripts/: gen_proto.py
services/ttr-nlp/src/: main.py
services/ttr-nlp/src/kadmos_service/: __init__.py  config.py
services/ttr-nlp/src/kadmos_service/api/: routes.py
services/ttr-nlp/src/kadmos_service/engines/: __init__.py  langid_engine.py  morphodita_engine.py  nametag_engine.py  spacy_engine.py  stanza_engine.py
services/ttr-nlp/src/kadmos_service/pipeline/: orchestrator.py
services/ttr-nlp/src/nlp_service/: __init__.py  config.py  contract.py  diagnostics.py  floor.py  routing.py
services/ttr-nlp/src/nlp_service/api/: grpc_server.py  routes.py
services/ttr-nlp/src/nlp_service/engines/: __init__.py  base.py  json_backend.py  langid_engine.py  morphodita_engine.py  nametag_engine.py  spacy_engine.py  stanza_engine.py
services/ttr-nlp/src/nlp_service/pipeline/: orchestrator.py
services/ttr-nlp/tests/: test_capability_matrix.py  test_config_load.py  test_config_repoint.py  test_contract_shapes.py  test_engine_free_front.py  test_grpc_service.py  test_routing.py
services/ttr-nlp/tests/component/: test_morphodita_backend.py  test_nametag_backend.py
services/ttr-nlp/tests/engines/: test_base.py  test_cnec_mapping.py  test_json_backend.py  test_langid.py
services/ttr-nlp/tests/fixtures/: parity_hero.json
services/ttr-nlp/tests/pipeline/: test_batch_lemmatize.py  test_degrade_floor.py  test_orchestrator.py
services/ttr-query/: README.md  build.gradle.kts
services/ttr-resolver/: build.gradle.kts
services/ttr-translate/: README.md  build.gradle.kts
services/ttr-validate/: README.md  build.gradle.kts
services/veles/: README.md  build.gradle.kts
shared/libs/python/otel-config/: README.md  pyproject.toml
shared/libs/python/otel-config/src/otel_config/: __init__.py  client_interceptor.py  logging_handler.py  middleware.py  setup.py
shared/proto/: build.gradle.kts
shared/proto-llm/: build.gradle.kts
tools/_smoke-test/: build.gradle.kts
tools/ttr-fuzzy-mcp/: build.gradle.kts
tools/ttr-meta-mcp/: build.gradle.kts
tools/ttr-nlp-mcp/: build.gradle.kts
tools/ttr-query-mcp/: README.md  build.gradle.kts
workers/ttr-worker-mssql/: README.md  build.gradle.kts
workers/ttr-worker-polars/: Dockerfile  README.md  pyproject.toml
workers/ttr-worker-polars/bench/: bench_throughput.py
workers/ttr-worker-polars/conf/: application.conf
workers/ttr-worker-polars/docs/: catalog-info.yaml
workers/ttr-worker-polars/docs/technical/: worker-polars.md  worker-steropes.md
workers/ttr-worker-polars/k8s/: Chart.yaml  README.md  values.yaml
workers/ttr-worker-polars/k8s/base/: deployment.yaml
workers/ttr-worker-polars/k8s/overlays/local/: kustomization.yaml
workers/ttr-worker-polars/k8s/templates/: _env.tpl
workers/ttr-worker-polars/src/workers_polars/: __init__.py  config.py  converter.py  fingerprint.py  grpc_service.py  main.py  probes.py  workspace.py
workers/ttr-worker-polars/src/workers_steropes/: config.py  converter.py  fingerprint.py  grpc_service.py  main.py  probes.py  workspace.py
workers/ttr-worker-polars/tests/: test_config_and_capabilities.py  test_converter.py  test_execute_rpc.py  test_fingerprint.py  test_import_rpc.py  test_otel_spans.py  test_probes.py  test_workspace.py
workers/ttr-worker-postgres/: README.md  build.gradle.kts
(+1605 files in other folders)
