[project]
name = "grounding-eval"
version = "0.1.0"
description = "Standalone eval corpus + runner for the deterministic time/geo/money grounding feature (A14)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
