[project]
name = "nlp-service"
version = "0.1.0"
description = "NLP — NLP foundation service - multi-engine analysis (Stanza, spaCy, NameTag, langid)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ENGINE-FREE FRONT (RG-P1.S3.T6): NO torch / stanza / spaCy / models here —
    # every model-bearing engine is an HTTP-adapter client to its own backend
    # image. The front is contract + routing + langid only.
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.27.0",
    "lingua-language-detector>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    # gRPC is the service contract (RG-P1.S1). ttr-nlp owns its generated
    # `org.tatrman.{nlp,common}.v1` stubs (messages + service) under
    # `generated/`, produced from the shared `.proto` source by grpcio-tools —
    # it does NOT install `shared-proto` (whose Python lane emits message types
    # only, no gRPC service stub, and would collide on the `org.tatrman.nlp.v1`
    # package). The `.proto` file remains the single canonical source.
    "grpcio>=1.68.0",
    "protobuf>=5.28.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "otel-config",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "pytest-asyncio>=0.25.0",
    # grpcio-tools carries protoc + the grpc_python plugin used by
    # `scripts/gen_proto.py` to (re)generate the stubs under `generated/`.
    "grpcio-tools>=1.68.0",
]

[tool.uv]
# Not an installable package (no build-system); deps-only project, like the
# other Python services. Tests import `nlp_service` via the pytest `pythonpath`
# below rather than from an installed wheel.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Component tier (real backends: MorphoDiTa/NameTag 3 self-hosted + Lindat) is
# opt-in — excluded by default so the unit suite needs no network. Run it with
# `just test-py services/ttr-nlp -m component` once the backend images are up.
addopts = ["-m", "not component"]
# `src/` layout: put it on sys.path so `from nlp_service...` resolves under
# `uv run pytest` (the package is intentionally not installed — see above).
# `generated/` carries the grpcio-tools-produced `org.tatrman.*` proto stubs
# (regenerated by `scripts/gen_proto.py`; a session-level conftest ensures they
# exist before collection).
pythonpath = ["src", "generated"]
# Component tier (testing arc Phase 1 Stage 1.1) — mirrors the Kotlin
# `componentTest` source set. Real-dep specs (testcontainers-python) carry
# `@pytest.mark.component`; select with `just test-py services/ttr-nlp -m component`.
markers = [
    "component: real-dependency component tier (testcontainers-python; no cluster)",
]

[tool.ruff]
target-version = "py313"

[tool.uv.sources]
otel-config = { path = "../../shared/libs/python/otel-config", editable = true }